renamed menu to index because of convention

--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GINKO.MY</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="main-menu">
+        <h1 class="title">GINKO.MY</h1>
+        <button class="play-button" onclick="startGame()">Play</button>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
+
